syntax = "proto3";
import "google/protobuf/empty.proto";

package control_db;

message IdentityEmail {
    bytes identity = 1;
    string email = 2;
}

// An energy balance (per identity).
message EnergyBalance {
    bytes identity = 1;
    // How much budget is remaining for this identity.
    int64 balance_quanta = 2;
}

enum HostType {
    WASM32 = 0;
}

message Database {
    uint64 id = 1;
    bytes address = 2;
    bytes identity = 3;
    HostType host_type = 4;
    uint32 num_replicas = 5;
    bytes program_bytes_address = 6;
}

message DatabaseStatus {
    string state = 2;
}

message DatabaseInstance {
    uint64 id = 1;
    uint64 database_id = 2;
    uint64 node_id = 3;
    bool leader = 4;
}

message DatabaseInstanceStatus {
    string state = 2;
}

message Node {
    uint64 id = 1;
    bool unschedulable = 2;

    // TODO: It's unclear if this should be in here since it's arguably status
    // rather than part of the configuration kind of. I dunno. 
    string advertise_addr = 3;
}

message NodeStatus {
    string state = 1;
    // TODO: node memory, CPU, and storage capacity
    // TODO: node memory, CPU, and storage allocatable capacity
    // SEE: https://kubernetes.io/docs/reference/kubernetes-api/cluster-resources/node-v1/#NodeStatus
}